Replace geoJson with Highmaps data; Bug fixes to prevent map being too small

--- a/admin/scss/admin.scss
+++ b/admin/scss/admin.scss
@@ -309,3 +309,10 @@ label {
     position: relative;
     text-align: center;
 }
+
+#map_us {
+    height: 500px; 
+    min-width: 310px; 
+    max-width: 800px; 
+    margin: 0 auto; 
+}
